--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,15 +13,37 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Learn"
+        android:usesCleartextTraffic="true"
+        tools:replace="android:icon"
         tools:targetApi="31">
         <activity
-            android:name="com.example.learningplatform.MainActivity"
+            android:name="com.example.learningplatform.AdminActivity"
+            android:exported="true" >
+        </activity>
+        <activity
+            android:name="com.example.learningplatform.AddModuleActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.example.learningplatform.ImageUpload"
+            android:exported="true" />
+        <activity
+            android:name="com.example.learningplatform.ModulesActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.example.learningplatform.CreateAccountActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        </activity>
+        <activity
+            android:name="com.example.learningplatform.ContentActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.example.learningplatform.Login"
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
     </application>
 
