--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,14 @@
         tools:replace="android:icon"
         tools:targetApi="31">
         <activity
+            android:name="com.example.learningplatform.AddContentActivity"
+            android:exported="false" />
+        <activity
             android:name="com.example.learningplatform.AddLevel"
             android:exported="false" />
         <activity
             android:name="com.example.learningplatform.AdminActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name="com.example.learningplatform.AddModuleActivity"
             android:exported="true" />
@@ -33,7 +36,7 @@
             android:exported="true" />
         <activity
             android:name="com.example.learningplatform.CreateAccountActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name="com.example.learningplatform.Splash"
             android:exported="true">
@@ -48,7 +51,7 @@
             android:exported="true" />
         <activity
             android:name="com.example.learningplatform.Login"
-            android:exported="true"/>
+            android:exported="true" />
     </application>
 
 </manifest>
