--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +18,12 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:icon"
         tools:targetApi="31">
+        <activity
+            android:name="com.example.learningplatform.UploadContentActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.example.learningplatform.Upload"
+            android:exported="true" />
         <activity
             android:name="com.example.learningplatform.AddContentActivity"
             android:exported="false" />
@@ -33,7 +41,7 @@
             android:exported="true" />
         <activity
             android:name="com.example.learningplatform.ModulesActivity"
-            android:exported="true" />
+            android:exported="true"></activity>
         <activity
             android:name="com.example.learningplatform.CreateAccountActivity"
             android:exported="true" />
